0025618: Avoid classes with an assignment operator and not implementing both a destructor and a copy constructor

User-defined assignment operator is removed in the classes IntPolyh_StartPoint and Quantity_Color, as default assignment will be OK